--- a/res/layout/simple_listview_item.xml
+++ b/res/layout/simple_listview_item.xml
@@ -2,28 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
     
-    <TextView  
-        android:id="@+id/person_name"  
-        android:textSize="23sp"  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-	  />  
-	  <TextView  
-	        android:id="@+id/person_age"  
+    <ImageView 
+        android:id="@+id/person_icon"
+        android:layout_width="64dip"
+        android:layout_height="64dip"
+        android:layout_gravity="center"/>
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+	    <TextView  
+	        android:id="@+id/person_name"  
+	        android:textSize="23sp"  
 	        android:layout_width="wrap_content"  
 	        android:layout_height="wrap_content"  
-	  />  
-	  <TextView  
-	        android:id="@+id/person_email"  
-	        android:layout_width="wrap_content"  
-	        android:layout_height="wrap_content"  
-	  />  
-	  <TextView  
-	        android:id="@+id/person_address"  
-	        android:layout_width="wrap_content"  
-	        android:layout_height="wrap_content"  
-	  />  
+		  />  
+		  <TextView  
+		        android:id="@+id/person_age"  
+		        android:layout_width="wrap_content"  
+		        android:layout_height="wrap_content"  
+		  />  
+		  <TextView  
+		        android:id="@+id/person_email"  
+		        android:layout_width="wrap_content"  
+		        android:layout_height="wrap_content"  
+		  />  
+		  <TextView  
+		        android:id="@+id/person_address"  
+		        android:layout_width="wrap_content"  
+		        android:layout_height="wrap_content"  
+		  />  
+	</LinearLayout>
 
 </LinearLayout>
