--- a/res/layout/async_imagelist_item.xml
+++ b/res/layout/async_imagelist_item.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-    <ListView
-        android:id="@+id/async_listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-    </ListView>
+    <ImageView   
+        android:id="@+id/photo"  
+        android:layout_width="90dip"  
+        android:layout_height="90dip"  
+        android:src="@drawable/ic_empty"  
+        android:layout_centerInParent="true"  
+        />  
 
 </LinearLayout>
