array adapter first version

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -56,6 +56,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/fragment_touch"/>
+        <Button 
+            android:id="@+id/array_adapter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/array_adapter"/>
 	    <TextView
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
